# rapla-ical-proxy

./: Cargo.toml  Containerfile  Dockerfile  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: build-push.yml  build.yml  checks.yml  deploy.yml  fly.yml
src/: cache.rs  calendar.rs  helpers.rs  logging.rs  main.rs  parser.rs  proxy.rs  resolver.rs
