[package]
name = "rapla-ical-proxy"
edition = "2024"

[dependencies.clap]
version = "4.5"
features = ["derive", "env"]

[dependencies.tokio]
version = "1.47"
features = ["rt-multi-thread", "signal", "test-util"]

[dependencies.axum]
version = "0.8"
default-features = false
features = ["tokio", "http1", "http2", "query"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["rustls-tls-webpki-roots", "charset"]

[dependencies.scraper]
version = "0.24"
default-features = false

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["std", "now"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["preserve_order"]

[dependencies]
html-escape = "0.2"
ics = "0.5"
quick_cache = "0.6"
serde_urlencoded = "0.7"
