[package]
name = "rapla-ical-proxy"
edition = "2024"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["tokio", "http1", "http2", "query"] }
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
html-escape = "0.2"
ics = "0.5"
moka = { version = "0.12", default-features = false, features = ["future"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "charset"] }
scraper = { version = "0.24", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
serde_urlencoded = "0.7"
tokio = { version = "1.49", features = ["rt-multi-thread", "signal", "test-util"] }

[profile.release]
strip = true
